; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-tcp-open.c_timer_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-tcp-open.c_timer_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shutdown_req = common dso_local global i32 0, align 4
@client = common dso_local global i32 0, align 4
@shutdown_cb = common dso_local global i32 0, align 4
@shutdown_requested = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @timer_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_cb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32, i32* @shutdown_cb, align 4
  %5 = call i32 @uv_shutdown(i32* @shutdown_req, i32* @client, i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp eq i32 %6, 0
  %8 = zext i1 %7 to i32
  %9 = call i32 @ASSERT(i32 %8)
  %10 = load i32, i32* @shutdown_requested, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* @shutdown_requested, align 4
  ret void
}

declare dso_local i32 @uv_shutdown(i32*, i32*, i32) #1

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
